--- a/content/themes/default/index.pug
+++ b/content/themes/default/index.pug
@@ -3,5 +3,6 @@ html
     head
         meta(charset="utf-8")
         title Blog name
+        link(rel="stylesheet", type="text/css", href="/static/styles/main.css")
     body
         h1 test body
