--- a/content/themes/default/index.pug
+++ b/content/themes/default/index.pug
@@ -3,6 +3,7 @@ html
     head
         meta(charset="utf-8")
         title Blog name
+        link(rel="stylesheet", type="text/css", href="//cdn.bootcss.com/spectre.css/0.1.25/spectre.min.css")
         link(rel="stylesheet", type="text/css", href="/static/styles/main.css")
     body
-        h1 test body
+        include components/header.pug
