--- a/content/themes/default/static/styles/main.css
+++ b/content/themes/default/static/styles/main.css
@@ -1,12 +1,7 @@
-html, body{
-    margin: 0;
-    padding: 0;
-}
-
 body{
-    font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont,
         "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
         "Fira Sans", "Droid Sans", "Helvetica Neue",
         sans-serif;
+    border-top: 10px solid #4452c0;
 }
