--- a/content/themes/default/admin/login.pug
+++ b/content/themes/default/admin/login.pug
@@ -1,1 +1,6 @@
 h1 Admin Login
+
+form(action="/login", method="post")
+    input(type="text", name="user")
+    input(type="password", name="password")
+    button(type="submit") 登录
