add index render

--- a/content/themes/default/components/base.pug
+++ b/content/themes/default/components/base.pug
@@ -8,5 +8,6 @@ html
         block style
     body
         block body
+        script(src='//cdn.bootcss.com/fetch/2.0.3/fetch.min.js')
         script(src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js")
         block script
