--- a/content/themes/default/index.pug
+++ b/content/themes/default/index.pug
@@ -3,9 +3,11 @@ extends components/base.pug
 block body
     include components/header.pug
     section.container.grid-960
-        each i in [1,2,3,4,5]
+        each article in list
             .columns
                 .column
-                    h3 This is a title
-                    summary This is the summary
-                    p To make a contribution to the world by making tools for the mind that advance humankind.
+                    h3 #{article.title}
+                    summary #{article.modified}
+                    p #{article.text}
+
+block script
